--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,20 +8,22 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "lucide-react": "^0.408.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "^5.0.1",
     "resolve-url-loader": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+"scripts": {
+  "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start --config webpack.config.js",
+  "build": "react-scripts build --config webpack.config.js",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
