--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "css-loader": "^7.1.2",
     "lucide-react": "^0.408.0",
+    "postcss-cli": "^11.0.0",
+    "postcss-loader": "^8.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -16,14 +19,15 @@
     "react-router-dom": "^6.24.0",
     "react-scripts": "^5.0.1",
     "resolve-url-loader": "^5.0.0",
+    "style-loader": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
-"scripts": {
-  "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start --config webpack.config.js",
-  "build": "react-scripts build --config webpack.config.js",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-},
+  "scripts": {
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start --config webpack.config.js",
+    "build": "react-scripts build --config webpack.config.js",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -43,8 +47,8 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
   }
 }
