--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
@@ -51,4 +52,5 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13"
   }
+
 }
