--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,8 +49,8 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "autoprefixer": "^10.4.20",
+    "axios-mock-adapter": "^2.0.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13"
   }
-
 }
