--- a/backend/package.json
+++ b/backend/package.json
@@ -13,5 +13,12 @@
     "class-validator": "^0.14.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "@nestjs/testing": "^10.4.4",
+    "@types/jest": "^29.5.13",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5"
   }
 }
