--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start --config webpack.config.js",
     "build": "react-scripts build --config webpack.config.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "e2e": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -56,6 +57,7 @@
     "autoprefixer": "^10.4.20",
     "axios-mock-adapter": "^2.0.0",
     "babel-jest": "^29.7.0",
+    "cypress": "^13.15.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.47",
