--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,6 +60,7 @@
     "cypress": "^13.15.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "playwright": "^1.47.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13"
   }
