80% docker execution, without affecting the existing code

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,24 +1,24 @@
-# Use an official Node runtime as a parent image
-FROM node:14-alpine
+# Use Node.js base image
+FROM node:16
 
-# Set the working directory in the container
-WORKDIR /usr/src/app
+# Set working directory
+WORKDIR /app
 
-# Copy package.json and package-lock.json (or yarn.lock)
-COPY package*.json ./
+# Copy package.json and package-lock.json to install dependencies
+COPY package.json package-lock.json ./
 
-# Install any dependencies, including 'node_modules' for production only
-RUN npm install --only=production
+# Install dependencies
+RUN npm install
 
-# Copy the rest of your application’s code into the container
+# Copy the rest of the backend files
 COPY . .
 
-# Compile the TypeScript (if your app is TypeScript-based)
-#RUN npm run build
+# Build the backend
+RUN npm run build
 
-# The app binds to port 3000 unless configured otherwise
-EXPOSE 3000
+# Expose the backend's listening port (e.g., 3001)
+EXPOSE 3001
 
-# Define the command to run your app using CMD which defines your runtime
-CMD ["node", "dist/main"]
+# Start the backend server
+CMD ["npm", "start"]
 
