--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,6 +19,10 @@ RUN npm run build
 # Expose the backend's listening port (e.g., 3001)
 EXPOSE 3001
 
-# Start the backend server
-CMD ["npm", "start"]
+# Add wait-for-it script
+COPY wait-for-it.sh /usr/local/bin/wait-for-it
+RUN chmod +x /usr/local/bin/wait-for-it
+
+# Start the backend server with wait-for-it
+CMD ["wait-for-it", "db:5432", "--", "npm", "start"]
 
