build.sh in root is back and be modified to truly work, only the tag is wrong, but overall fine

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -19,6 +19,10 @@ RUN npm run build
 # Use Nginx to serve the built files
 FROM nginx:alpine
 
+# Add wait-for-it script
+COPY scripts/wait-for-it.sh /usr/local/bin/wait-for-it
+RUN chmod +x /usr/local/bin/wait-for-it
+
 # Copy built files to Nginx's default HTML folder
 COPY --from=build /app/build /usr/share/nginx/html
 
