(actual) Dockerfile modified to solve the wait-for-it.sh file problem regarding ECSC during deployment

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,10 @@ FROM node:16
 # Set working directory
 WORKDIR /app
 
+# (a) Copy wait-for-it script
+COPY wait-for-it.sh /usr/local/bin/wait-for-it
+RUN chmod +x /usr/local/bin/wait-for-it
+
 # Copy package.json and package-lock.json to install dependencies
 COPY package.json package-lock.json ./
 
@@ -20,4 +24,4 @@ RUN npm run build
 EXPOSE 3001
 
 # Start the backend server directly
-CMD ["npm", "start"]
+CMD ["wait-for-it", "$DATABASE_HOST:$DATABASE_PORT", "-t", "30", "--", "npm", "start"]
